# droidian-fpd-client

./: CMakeLists.txt  droidian-fpd-client.conf  droidian-fpd-client.pro  droidian-fpd-gui.desktop  droidian-fpd-gui.pro  droidian-fpd-identify.pro  droidian-fpd-unlocker.pro  droidian-fpd-unlocker.service  fpdlistener.service  fpidentify
debian/: changelog  control  droidian-fpd-client.install  droidian-fpd-client.links  droidian-fpd-gui.install  libpam-fpd.install  rules
pam/: pam_fpd.c
pam/example/: Makefile  pam_example.c  pam_example.pam
qml/: main.qml
src/: fpdclient.cpp  fpdgui.cpp  fpdidentify.cpp  fpdinterface.cpp  fpdinterface.h  fpdinterfaceqmladapter.cpp  fpdinterfaceqmladapter.h  fpdlistener.cpp  fpdunlocker.cpp  fpidentify.c  journallistener.cpp  journallistener.h
